# learning

./: .gitignore  .tool-versions  Brewfile  Brewfile.post_uninstall  LAPTOP_SETUP.md  Makefile  README.md  RESUME.md
angular/: ANGULAR_COMPLETE_GUIDE_COURSE.md  Makefile
angular/modern_angular/: Makefile  README.md
angular/ng-complete-guide-task-management/: README.md  angular.json  package-lock.json  package.json
angular/ng-dev-home-app/: README.md  angular.json  db.json  package-lock.json  package.json
blog/: 20170109_ruby_conf_au.md  201702_progress.md  201703_progress.md  201704_progress.md  201705_progress.md  201706_progress.md  201707_progress.md  201708_progress.md  201709_progress.md  201710_progress.md  201711_progress.md  201712_progress.md  201801_progress.md  201802_progress.md  201803_progress.md  201804_progress.md  201805_progress.md  201806_progress.md  201807_progress.md  201809_progress.md  201810_progress.md  201811_progress.md  201812_progress.md  201901_progress.md  201902_progress.md  201908_progress.md  202003_progress.md  202004_progress.md  202005_progress.md  202008_progress.md  202009_progress.md  202010_progress.md  202105_progress.md  202109_progress.md  202111_progress.md  202202_progress.md  202203_progress.md  202204_progress.md  202205_progress.md  202206_progress.md  (+17 more)
competitions/20260401_e14_road-test_al_foil/: .gitignore  README.md  al_foil_review.ipynb
competitions/202606_e14_design-challenge_EZ-EV/: README.md
competitions/202606_e14_road-test_pi_compute/: README.md
competitions/202606_e14_road-test_red_pitaya/: README.md  make_pdf.py  red_pitaya_roadtest_proposal.md
config/: .vimrc
css/milligram-product-page/: grid-system.html  index.html  package.json
css/skeleton-landing-page/: .gitignore  Rakefile  grid-system.html  index.html
demo/: README.md
docs/: Gemfile  _config.yml
dojo/: advent_of_code_2020.md
graphql/: package-lock.json  package.json
hacks/: README.md
http2/: README.md
ionic/: README.md
lang/rust/rust_in_action/ch1-time-api/: Cargo.toml
lang/rust/rust_in_action/ch1-time-api/src/: main.rs
lang/rust/rust_web_development/question-bad-words/: Cargo.toml  justfile  setup.toml
lang/rust/rust_web_development/question-bad-words/handle-errors/: Cargo.toml
lang/rust/rust_web_development/question-bad-words/handle-errors/src/: lib.rs
lang/rust/rust_web_development/question-bad-words/migrations/: 20240608124633_questions_table.up.sql  20240608125006_answers_table.down.sql  20240608125006_answers_table.up.sql  20240616190905_create_accounts_table.up.sql  20240624101017_add_account_id_to_questions_table.down.sql
lang/rust/rust_web_development/question-bad-words/src/: main.rs  profanity.rs  store.rs
lang/rust/rust_web_development/question-bad-words/src/routes/: authentication.rs  question.rs
lang/rust/rust_web_development/question-bad-words/src/types/: account.rs  answer.rs  pagination.rs
lang/rust/rust_web_development/question_in_db_crud/: .gitignore  Cargo.toml  justfile  questions.json  rustfmt.toml
lang/rust/rust_web_development/question_in_db_crud/handle-errors/: Cargo.toml
lang/rust/rust_web_development/question_in_db_crud/handle-errors/src/: lib.rs
lang/rust/rust_web_development/question_in_db_crud/migrations/: 20240608124633_questions_table.down.sql  20240608124633_questions_table.up.sql  20240608125006_answers_table.up.sql
lang/rust/rust_web_development/question_in_db_crud/src/: main.rs  store.rs
lang/rust/rust_web_development/question_in_db_crud/src/routes/: answer.rs
lang/rust/rust_web_development/question_in_db_crud/src/types/: answer.rs  pagination.rs  question.rs
lang/rust/rust_web_development/question_in_memory_crud/: .gitignore  Cargo.toml  log4rs.yaml  questions.json
lang/rust/rust_web_development/question_in_memory_crud/handle-errors/src/: lib.rs
lang/rust/rust_web_development/question_in_memory_crud/src/: main.rs
lang/rust/rust_web_development/question_in_memory_crud/src/routes/: answer.rs  question.rs
lang/rust/rust_web_development/question_in_memory_crud/src/types/: pagination.rs  question.rs
rspec-anti-patterns/: .rubocop.yml  Gemfile  Makefile  README.md
rxjs/: README.md
serverless/: Brewfile  Makefile  README.md
serverless/rust-sample/rust_app/: Cargo.toml
serverless/rust-sample/rust_app/src/: lib.rs  main.rs
tournament_with_m/: tournament.rb  tournament_test.rb
(+1032 files in other folders)
