[package]
name = "ch1-time-api"
version = "0.1.0"
authors = ["Michael Milewski <saramic@gmail.com>"]

[dependencies]
chrono = "0.4.0"
rocket = "0.3.0"
rocket_codegen = "0.3.0"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.3.0"
default-features = false
features = ["json"]
