[package]
name = "question-bad-words"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
handle-errors = { path = "handle-errors" }
paseto = "2.0.2"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-middleware = "0.3.1"
reqwest-retry = "0.5.0"
rust-argon2 = "2.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
warp = "0.3.7"
