[package]
name = "question_in_db_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { version = "2.2.6", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
handle-errors = { path = "handle-errors" }
uuid = { version = "1.8.0", features = ["v4"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "migrate", "postgres" ] }
