[package]
name = "question_in_memory_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { version = "2.2.6", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
handle-errors = { path = "handle-errors" }
