[package]
name = "handle-errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
tracing = { version = "0.1.40", features = ["log"] }
reqwest = "0.12.4"
reqwest-middleware = "0.3.1"
sqlx = { version = "0.7.4", features = ["postgres"] }
